# brailley

./: LICENSE  README.md  __init__.py  brailley.py  directions.py  main.py  mapper.py  pyproject.toml  solenoid.py
brailley/: __init__.py  binary_filter.py  brailley.py  camera.py  grayscale_filter.py  image_filter.py  main.py  mapper.py  noise_removal_filter.py  solenoid.py
brailley/reader/: reader.py
brailley/reader/image_reader/: __init__.py  camera.py  camera_io_device.py  flash.py  image_reader.py  led_flash.py  ocr.py  rpi_camera.py  tesseract_ocr.py
brailley/reader/image_reader/preprocessing/: __init__.py  binary_filter.py  grayscale_filter.py  image_filter.py  multiple_filters_decorator.py  noise_removal_filter.py
brailley/translator/: translator.py
brailley/translator/solenoid_braille/: __init__.py  braille_mapper.py  directions.py  solenoid.py  solenoid_driven_braille_translator.py
docs/: brailley.reader.image_reader.preprocessing.rst  brailley.reader.image_reader.rst  brailley.reader.rst  brailley.rst  brailley.translator.rst  brailley.translator.solenoid_braille.rst  conf.py  index.rst  modules.rst
tests/: __init__.py  test_brailley.py  test_directions.py  test_mapper.py
tests/reader/image_reader/: test_camera.py  test_image_reader.py  test_rpi_camera.py
tests/reader/image_reader/preprocessing/: test_multiple_filters_decorator.py
tests/translator/solenoid_braille/: test_braille_mapper.py  test_directions.py  test_solenoid_driven_braille_translator.py
