[tool.poetry]
name = "brailley"
version = "0.1.0"
description = ""
authors = ["Vinícius Couto Tasso <vcoutasso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.10"
gpiozero = "^1.6.2"
picamera = "^1.13"
pigpio = "^1.78"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
